--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ body {
 }
 
 .banner-button {
-  background-color: #ff6600;
+  background-color: #0400ff;
   padding: 10px 20px;
   border-radius: 5px;
   text-decoration: none;
