--- a/src/contato.css
+++ b/src/contato.css
@@ -4,6 +4,7 @@
     padding: 50px 0;
     display: flex;
     justify-content: center;
+    margin-top: 0px;
   }
   
   .contato-container {
@@ -35,6 +36,7 @@
     display: flex;
     align-items: center;
     margin-bottom: 20px;
+    height: 30px;
   }
   
   .contato-item img {
@@ -90,5 +92,21 @@
   
   .contato-button:hover {
     background-color: #e6b800;
+  }
+
+  .icon{
+    height: auto;
+  }
+
+  div{
+    margin-bottom: 0px;
+  }
+
+  section{
+    margin-top: 0px;
+  }
+
+  img{
+    margin-bottom: 0px;
   }
   
